src/objects/Product_Country_Price__c.object
<CustomObject>
    <fields>
        <fullName>ATM_Fee_in_other_currencies__c</fullName>
        <label>ATM Fee in other currencies</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Card_Replacement_Cost__c</fullName>
        <label>Card Replacement Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_per_Calendar_Month__c</fullName>
        <label>Cost per Calendar Month</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Product Country Prices</relationshipLabel>
        <relationshipName>Product_Country_Prices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Country Prices</relationshipLabel>
        <relationshipName>Product_Country_Prices</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Country Price</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Product Country Price Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Country Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>